[tool.poetry]
name = "mviz"
version = "0.1.0"
description = ""
authors = ["camilo iturra <iturra.camilo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sounddevice = "^0.4.6"
numpy = "^1.24.0"
matplotlib = "^3.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
